add testcodes