@@ -38,7 +38,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	//implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-jooq'
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
@@ -57,7 +57,14 @@ dependencies {
 	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	//compileOnly group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '6.1.0-M2'
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+	testImplementation 'org.jetbrains.kotlin:kotlin-test:2.0.0-RC1'
+	testImplementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.17.0'
+	testImplementation 'org.springframework.security:spring-security-test:6.2.3'
+	testImplementation 'io.mockk:mockk:1.13.10'
+	testImplementation 'com.ninja-squad:springmockk:4.0.2'
+	testImplementation 'com.h2database:h2:2.2.220'
 }
 
 tasks.withType(KotlinCompile) {
@@ -132,4 +139,9 @@ openApiGenerate {
 		useBeanValidation:"false",
 		exceptionHandler:"false"
 	]
+}
+
+test {
+	useJUnitPlatform()
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
